# newswrap

./: .pre-commit-config.yaml  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: build-and-deploy.yml  build-ci.yml  close-stale-issues-prs.yml  lint-commits.yml  publish-crate.yml
examples/: with_axum.rs  with_realtime_items.rs  with_simple_client.rs
examples/with-simple/: Cargo.toml
examples/with-simple-client/: Cargo.toml
examples/with-simple-client/src/: main.rs
examples/with-simple/src/: main.rs
src/: builder.rs  client.rs  comments.rs  errors.rs  http.rs  items.rs  lib.rs  stories.rs  users.rs
src/items/: client.rs  comments.rs  jobs.rs  mod.rs  poll.rs  poll_option.rs  poll_options.rs  polls.rs  stories.rs
src/realtime/: client.rs  mod.rs
src/users/: client.rs  mod.rs
tests/: item_client_should.rs  item_endpoints_should.rs  user_client_should.rs
