[workspace]
members = [".", "examples/*"]

[package]
name = "hacker-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Joey McKenzie <joey.mckenzie27@gmail.com>"]
keywords = ["hackernews"]
categories = ["api-bindings"]
homepage = "https://github.com/joeymckenzie/hacker-rs/"
repository = "https://github.com/joeymckenzie/hacker-rs/"
readme = "README.md"
description = "Hacker News API bindings for rust."

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde-well-known"] }
