[package]
name = "hacker-rs"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hacker-rs"
homepage = "https://github.com/joeymckenzie/hacker-rs/"
repository = "https://github.com/joeymckenzie/hacker-rs/"
authors = ["Joey McKenzie <joey.mckenzie27@gmail.com>"]
keywords = ["hackernews"]
categories = ["api-bindings"]
readme = "README.md"
description = "Hacker News API bindings for rust."

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde-well-known"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"

[[example]]
name = "simple"
path = "examples/with_simple_client.rs"

[[example]]
name = "stories"
path = "examples/with_axum.rs"
