[package]
name = "newswrap"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/newswrap"
homepage = "https://github.com/joeymckenzie/newswrap/"
repository = "https://github.com/joeymckenzie/newswrap/"
authors = ["Joey McKenzie <joey.mckenzie27@gmail.com>"]
keywords = ["hackernews", "hacker-news", "hackernewsapi", "hacker-news-api"]
categories = ["api-bindings"]
readme = "README.md"
description = "Hacker News API bindings for rust."

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde-well-known"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"

[[example]]
name = "simple"
path = "examples/with_simple_client.rs"

[[example]]
name = "axum"
path = "examples/with_axum.rs"

[[example]]
name = "realtime"
path = "examples/with_realtime_items.rs"
